force-app/main/default/objects/ks_pmj_base__ks_Request__c/ks_pmj_base__ks_Request__c.object-meta.xml
<CustomObject>
    <label>要件</label>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>要件No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>