force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/En_kategori__c.field-meta.xml
<CustomField>
    <fullName>En_kategori__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>綜合</fullName>
            </value>
            <value>
                <fullName>開発</fullName>
            </value>
            <value>
                <fullName>運用</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>