force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/kai_kigen_1__c.field-meta.xml
<CustomField>
    <fullName>kai_kigen_1__c</fullName>
    <label>期限日</label>
    <type>Date</type>
</CustomField>