force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/ks_pmj_base__Addon__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Addon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>個別開発</label>
    <type>Checkbox</type>
</CustomField>