force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/ks_pmj_base__BusinessProcess__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__BusinessProcess__c</fullName>
    <label>対象業務</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>顧客管理</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>