force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/ks_pmj_base__Customize__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Customize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>標準カスタマイズ</label>
    <type>Checkbox</type>
</CustomField>