force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/ks_pmj_base__InCharge__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__InCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>対応許可担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request</relationshipName>
    <type>Lookup</type>
</CustomField>