force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/ks_pmj_base__ManHout__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__ManHout__c</fullName>
    <label>対応工数(人日)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>