force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/ks_pmj_base__Note__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Note__c</fullName>
    <label>備考</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>