force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/ks_pmj_base__Priority__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Priority__c</fullName>
    <label>優先度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高</fullName>
                <color>#FF0000</color>
                <label>高</label>
            </value>
            <value>
                <fullName>中</fullName>
                <color>#FFCC66</color>
                <label>中</label>
            </value>
            <value>
                <fullName>低</fullName>
                <color>#33CC00</color>
                <label>低</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>