force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/ks_pmj_base__RealizationMethod__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__RealizationMethod__c</fullName>
    <label>実現方式</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>