force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/ks_pmj_base__Request__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Request__c</fullName>
    <label>実現要望</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>