force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/ks_pmj_base__SystemRequest__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__SystemRequest__c</fullName>
    <label>システム要件</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>