force-app/main/default/objects/ks_pmj_base__ks_Request__c/fields/yo_tanto__c.field-meta.xml
<CustomField>
    <fullName>yo_tanto__c</fullName>
    <label>担当者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>牛島</fullName>
            </value>
            <value>
                <fullName>大原</fullName>
            </value>
            <value>
                <fullName>小池</fullName>
            </value>
            <value>
                <fullName>松井</fullName>
            </value>
            <value>
                <fullName>松尾</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>