force-app/main/default/objects/ks_pmj_base__ks_Request__c/recordTypes/ks_pmj_base__AddRequest.recordType-meta.xml
<RecordType>
    <fullName>ks_pmj_base__AddRequest</fullName>
    <active>true</active>
    <label>02.追加要件</label>
</RecordType>