force-app/main/default/objects/ks_pmj_base__ks_Request__c/recordTypes/ks_pmj_base__InitialRequest.recordType-meta.xml
<RecordType>
    <fullName>ks_pmj_base__InitialRequest</fullName>
    <active>true</active>
    <label>01.当初要件</label>
</RecordType>