force-app/main/default/objects/ks_pmj_base__ks_Request__c/listViews/ks_pmj_base__All.listView-meta.xml
<ListView>
    <fullName>ks_pmj_base__All</fullName>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>