force-app/main/default/objects/ks_pmj_base__ks_Request__c/listViews/ks_pmj_base__RQ01.listView-meta.xml
<ListView>
    <fullName>ks_pmj_base__RQ01</fullName>
    <columns>ks_pmj_base__Priority__c</columns>
    <columns>NAME</columns>
    <columns>ks_pmj_base__Request__c</columns>
    <columns>ks_pmj_base__SystemRequest__c</columns>
    <columns>yo_tanto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>En_kategori__c</field>
        <operation>equals</operation>
        <value>開発</value>
    </filters>
    <label>対応中</label>
</ListView>